2009-10-27  Glenn Morris  <rgm@gnu.org>

	* make-dist: Make links to doc/lispintro/*.pdf.

2009-10-23  Jim Meyering  <meyering@redhat.com>

	* configure.in: Invoke $CPP with -P when creating Makefile and
	src/Makefile.  Without this, gcc 4.4.2 converts each
	backslash-newline pair in the input to a bare newline, yielding
	invalid Makefiles.

	* configure: Regenerate.

2009-10-19  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (vax-dec-vms): Remove, not supported anymore.

2009-10-15  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* configure.in (NS_HAVE_NSINTEGER): Back out previous change.
	(*-apple-darwin*): Add x86_64 architecture.

2009-10-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* config.guess, config.sub: Updated from master source.

2009-10-11  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* configure.in (NS_HAVE_NSINTEGER): Remove this test and define.

2009-10-07  Edward Trumbo  <etrumbo@comcast.net>  (tiny change)

	* Makefile.in (INFO_FILES): Add EDE and EIEIO.

2009-09-29  Glenn Morris  <rgm@gnu.org>

	* make-dist (check): Update for two new levels of subdirectory in lisp/.

2009-09-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* config.guess, config.sub: Updated from master source.

	* configure.in (OTHER_FILES): Define using autoconf not cpp.

2009-09-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* .dir-locals.el (change-log-mode): Restore bug-reference-mode.

2009-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* INSTALL: Update URL for GNU FreeFont.

2009-09-09  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (install-arch-indep): Don't recursively change perms of
	site-lisp and infodir.  There may be non-Emacs files in here, and the
	files supplied by Emacs are all handled explicitly already.  (Bug#3800)
	(mkdir): Set umask to world-readable before creating directories.
	mkinstalldirs already checks if dirs exist, don't duplicate this test.

2009-08-29  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (info-real): Don't ignore errors from doc Makefiles.