@@ -1,3 +1,10 @@
+2009-11-14  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* Makefile.in: If AUTO_DEPEND is defined, make gcc generate
+	dependency files in deps/. Include those files into Makefile.
+
+	* config.in: Generated (AUTO_DEPEND).
+
 2009-11-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* dbusbind.c (Vdbus_registered_objects_table): Renamed from
